testsuite/tests/prep/projects/syntax_error/p/pkg.ads
package Pkg is
   procedure Dummy;
end Pkg;
